--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,15 +13,19 @@
     "@bufbuild/protobuf": "^1.6.0",
     "@connectrpc/connect": "^1.2.1",
     "@connectrpc/connect-web": "^1.2.1",
+    "@react-three/fiber": "^8.16.2",
     "@reduxjs/toolkit": "^2.1.0",
     "base-64": "^1.0.0",
     "expo": "~50.0.13",
     "expo-clipboard": "~5.0.1",
     "expo-constants": "~15.4.5",
+    "expo-file-system": "~16.0.9",
+    "expo-gl": "~13.6.0",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
+    "expo-three": "^7.0.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-fetch-api": "^3.0.0",
@@ -36,6 +40,7 @@
     "react-redux": "^9.1.0",
     "styled-components": "^6.1.8",
     "text-encoding": "^0.7.0",
+    "three": "^0.163.0",
     "web-streams-polyfill": "^3.3.2"
   },
   "devDependencies": {
